change image size

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cabinet Vétérinaire Dourhou</title>
-
-    
     <!-- Primary Meta Tags -->
     <meta name="title" content="Nous contacter - Prendre contact ou demander un appel">
     <meta name="description" content="Contactez-nous via notre formulaire de contact ou prenez rendez-vous pour un rappel. Nous sommes là pour répondre à vos questions et vous fournir une assistance professionnelle.">
 
       <!-- Open Graph / Facebook -->
-      <meta property="og:card" content="summary_large_image">
+      <meta property="og:card" content="summary">
       <meta property="og:url" content="https://veterinary-care.com/">
       <meta property="og:title" content="Nous contacter - Prendre contact ou demander un appel">
       <meta property="og:description" content="N'hésitez pas à nous contacter pour toute question ou à demander à notre équipe vétérinaire de vous rappeler. Nous sommes là pour vous aider!"> 
